# App-BrainAmpSeries

./: .appveyor.yaml  .appveyor.yml  .gitignore  BrainAmpIoCtl.h  BrainAmpSeries.cfg  BrainAmpSeries_tst.cfg  CMakeLists.txt  Downsampler.h  LICENSE.txt  README.md  appveyor.yml  brainamp.cpp  brainamp.h  downsampler.cpp  downsampler.h  firdn.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  mainwindow_foo.cpp  mainwindow_foo.h  random_noise.txt  release_notes.txt  test_resampler.cpp
.github/workflows/: cppcmake.yml
BrainAmpSeries/: BrainAmpSeries.sln  BrainAmpSeries.vcxproj  BrainAmpSeries.vcxproj.filters
